unpackaged/main/default/objects/Conjunto_Visitas__c/Conjunto_Visitas__c.object-meta.xml
<CustomObject>
    <label>Conjunto de Visitas</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Conjunto de Visitas Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conjuntos de Visitas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>