unpackaged/main/default/objects/Conjunto_Visitas__c/fields/Caso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Caso_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso ATC</label>
    <referenceTo>Casos_Residente__c</referenceTo>
    <relationshipLabel>Conjuntos de Visitas</relationshipLabel>
    <relationshipName>Conjuntos_de_Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>