unpackaged/main/default/objects/Conjunto_Visitas__c/fields/Cita_Visita__c.field-meta.xml
<CustomField>
    <fullName>Cita_Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cita/Visita</label>
    <referenceTo>Visita__c</referenceTo>
    <relationshipLabel>Conjuntos de Visitas</relationshipLabel>
    <relationshipName>Conjuntos_de_Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>