unpackaged/main/default/objects/Conjunto_Visitas__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <formula>TEXT(Cita_Visita__r.Estatus__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>