unpackaged/main/default/objects/Conjunto_Visitas__c/fields/Proceso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso ATC</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Conjuntos de Visitas</relationshipLabel>
    <relationshipName>Conjuntos_de_Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>